# son-audiometry-tools

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.md  Makefile  README.md
.github/workflows/: continuous-integration.yml
include/shared/: errors.h
samples/simple/: CMakeLists.txt
scripts/: windows-build.ps1  windows-format.ps1  windows-setup.ps1  windows-test.ps1
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
